--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .metadata/
+keystore.jks
+Servers/
+.classpath/
+HKT_SHOP/target/m2e-wtp/web-resources/META-INF/maven/vn.HKT/HKT_SHOP/pom.properties
